<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:overScrollMode="never">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_padding_material_medium">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_material_micro"
            android:fontFamily="sans-serif-medium"
            android:text="@string/start_activity_vault_id_hint"
            android:textAppearance="?attr/textAppearanceCaption" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilVaultId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/fiord_20"
            app:boxStrokeColor="@color/invisible_input_border"
            app:errorEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedVaultId"
                style="TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_small"
            android:layout_marginBottom="@dimen/margin_padding_material_micro"
            android:fontFamily="sans-serif-medium"
            android:text="@string/start_activity_path_hint"
            android:textAppearance="?attr/textAppearanceCaption" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPath"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/fiord_20"
            app:boxStrokeColor="@color/invisible_input_border"
            app:errorEnabled="false"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiedPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_medium"
            android:text="@string/start_activity_environment_title"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/mbGroupEnvironment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedButton="@+id/mbSandbox"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbSandbox"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_activity_environment_sandbox"
                android:textAppearance="?attr/textAppearanceSubtitle2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbLive"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_activity_environment_Live"
                android:textAppearance="?attr/textAppearanceSubtitle2" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFlows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_material_medium"
            tools:itemCount="6"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/start_flow_card_layout"
            tools:spanCount="2" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>