<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/titleDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_material_small"
        android:layout_marginEnd="@dimen/margin_padding_material_small"
        android:layout_marginTop="@dimen/margin_padding_material_medium"
        android:layout_marginBottom="@dimen/margin_padding_material_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardExpDateFieldLay"
        android:text="@string/expiration_date_title"/>

    <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
        android:id="@+id/cardExpDateFieldLay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cardCVCFieldLay"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:boxStrokeColor="#969696"
        app:boxCornerRadius="@dimen/margin_padding_material_small"
        android:layout_marginTop="@dimen/margin_padding_material_medium"
        android:layout_marginStart="@dimen/margin_padding_material_medium"
        android:layout_marginEnd="@dimen/margin_padding_material_medium">
        <com.verygoodsecurity.vgscollect.widget.ExpirationDateEditText
            android:id="@+id/cardExpDateField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:datePickerModes="spinner"
            android:singleLine="true"
            app:datePattern="MM/yy"
            android:hint="@string/expiration_date_default_placeholder"
            android:paddingStart="@dimen/margin_padding_material_medium"
            android:paddingEnd="@dimen/margin_padding_material_medium"
            android:layout_marginStart="@dimen/margin_padding_material_medium"
            android:layout_marginEnd="@dimen/margin_padding_material_medium"/>
    </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>
<!--    app:cardPreview="right"-->

    <TextView
        android:id="@+id/titleCVC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@+id/cardCVCFieldLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_material_small"
        android:layout_marginEnd="@dimen/margin_padding_material_small"
        android:layout_marginTop="@dimen/margin_padding_material_medium"
        android:layout_marginBottom="@dimen/margin_padding_material_medium"
        android:text="@string/cvc_title"/>

    <com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout
        android:id="@+id/cardCVCFieldLay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleCVC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardExpDateFieldLay"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:boxStrokeColor="#969696"
        app:boxCornerRadius="@dimen/margin_padding_material_small"
        android:layout_marginTop="@dimen/margin_padding_material_medium"
        android:layout_marginStart="@dimen/margin_padding_material_medium"
        android:layout_marginEnd="@dimen/margin_padding_material_medium">
        <com.verygoodsecurity.vgscollect.widget.CardVerificationCodeEditText
            android:id="@+id/cardCVCField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:fieldName="cardCVCField"
            app:isRequired="true"
            app:singleLine="true"
            android:paddingStart="@dimen/margin_padding_material_medium"
            android:paddingEnd="@dimen/margin_padding_material_medium"
            android:layout_marginStart="@dimen/margin_padding_material_medium"
            android:layout_marginEnd="@dimen/margin_padding_material_medium"/>
    </com.verygoodsecurity.vgscollect.widget.VGSTextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>